# multi-agent-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
app/: asgi.py
app/adapters/outbound/repositories/: __init__.py  chat_repository.py  message_repository.py
app/application/ai_agent_gateway/: __init__.py  ai_agent_factory.py  ai_agent_interface.py  utils.py
app/application/ai_agent_gateway/agenda/: __init__.py  agent.py
app/application/services/: __init__.py  ai_service.py  auth_service.py  chat_service.py  health_service.py  message_service.py  snapshot_service.py
app/application/use_case/: chat_exchange_service.py
app/config/: app_settings.py  base_settings.py  constants.py  temp_route_registry.py
app/config/proxy_routes/: agenda.py  auth.py  public.py  snapshot.py
app/config/route_registry/: __init__.py  core.py  loader.py
app/dto/: user_dto.py
app/infrastructure/db/migrations/: alembic.ini  env.py  script.py.mako
app/lib/: context.py  logger.py  singleton.py
app/lib/errors/: __init__.py  exceptions.py  handlers.py
app/lib/http/: __init__.py  http_service.py
app/lib/schemas/: client_info_schema.py  token_payload.py
app/lib/security/: __init__.py  jwt.py  role.py
app/lib/utils/: pyproject.py
app/server/: openapi.py  plugins.py  query_dependencies.py  routers.py
app/server/life_cycle/: __init__.py  lifespan.py  shutdown.py  startup.py
app/server/middleware/: __init__.py  auth_guard.py  logging.py  reverse_proxy.py
scripts/: entry
(+32 files in other folders)
